--- a/MipsEmulator/App.xaml
+++ b/MipsEmulator/App.xaml
@@ -2,23 +2,24 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
-	<Application.Resources>
+    <Application.Resources>
 
-		<Style x:Key="TextBlockHeaderStyle" TargetType="{x:Type TextBlock}">
-			<Setter Property="FontSize" Value="20"/>
-			<Setter Property="Effect">
-				<Setter.Value>
-					<DropShadowEffect BlurRadius="10" ShadowDepth="0" Direction="0" RenderingBias="Quality" Opacity="0.5"/>
-				</Setter.Value>
-			</Setter>
-			<Setter Property="HorizontalAlignment" Value="Center"/>
-			<Setter Property="Margin" Value="10"/>
-		</Style>
+        <Style x:Key="TextBlockHeaderStyle" TargetType="{x:Type TextBlock}">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="Effect">
+                <Setter.Value>
+                    <DropShadowEffect BlurRadius="10" ShadowDepth="0" Direction="0" RenderingBias="Quality"
+                                      Opacity="0.5" />
+                </Setter.Value>
+            </Setter>
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="Margin" Value="10" />
+        </Style>
 
-		<Style x:Key="TextBlockHeader2Style" TargetType="{x:Type TextBlock}">
-			<Setter Property="FontSize" Value="14"/>
-			<Setter Property="Margin" Value="5"/>
-		</Style>
+        <Style x:Key="TextBlockHeader2Style" TargetType="{x:Type TextBlock}">
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="Margin" Value="5" />
+        </Style>
 
-	</Application.Resources>
+    </Application.Resources>
 </Application>
